.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
01:02:23 **** Incremental Build of configuration Debug for project Code ****
make all 
Building file: ../Sistema.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"Sistema.d" -MT"Sistema.d" -o "Sistema.o" "../Sistema.cpp"
../Sistema.cpp: In function ‘void agregarDatosDePrueba()’:
../Sistema.cpp:1054:2: error: ‘cc’ was not declared in this scope
  cc->ingresarFechaConsulta(Fecha(23,6,2014));
  ^
../Sistema.cpp:1111:6: error: ‘ms’ was not declared in this scope
  s = ms->find(34562345);
      ^
../Sistema.cpp:1112:6: error: ‘mm’ was not declared in this scope
  m = mm->find(65436667);
      ^
../Sistema.cpp:1123:20: error: ‘cd’ was not declared in this scope
  Diagnostico* D1 = cd->altaDiagnostico(rep->getCodigo(), rep->getEtiqueta(),"Desc 1",cons);
                    ^
../Sistema.cpp:1180:2: error: ‘ct’ was not declared in this scope
  ct->agregarTratamientoQuirurjico(65436667,"Desc 11",Fecha(25,7,2014),D2);
  ^
make: *** [Sistema.o] Error 1
01:02:27 **** Incremental Build of configuration Debug for project Code ****
make all 
Building file: ../Sistema.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"Sistema.d" -MT"Sistema.d" -o "Sistema.o" "../Sistema.cpp"
../Sistema.cpp: In function ‘void agregarDatosDePrueba()’:
../Sistema.cpp:1054:2: error: ‘cc’ was not declared in this scope
  cc->ingresarFechaConsulta(Fecha(23,6,2014));
  ^
../Sistema.cpp:1111:6: error: ‘ms’ was not declared in this scope
  s = ms->find(34562345);
      ^
../Sistema.cpp:1112:6: error: ‘mm’ was not declared in this scope
  m = mm->find(65436667);
      ^
../Sistema.cpp:1123:20: error: ‘cd’ was not declared in this scope
  Diagnostico* D1 = cd->altaDiagnostico(rep->getCodigo(), rep->getEtiqueta(),"Desc 1",cons);
                    ^
../Sistema.cpp:1180:2: error: ‘ct’ was not declared in this scope
  ct->agregarTratamientoQuirurjico(65436667,"Desc 11",Fecha(25,7,2014),D2);
  ^
make: *** [Sistema.o] Error 1
01:03:24 **** Incremental Build of configuration Debug for project Code ****
make all 
Building file: ../Sistema.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"Sistema.d" -MT"Sistema.d" -o "Sistema.o" "../Sistema.cpp"
../Sistema.cpp: In function ‘void agregarDatosDePrueba()’:
../Sistema.cpp:1054:2: error: ‘cc’ was not declared in this scope
  cc->ingresarFechaConsulta(Fecha(23,6,2014));
  ^
../Sistema.cpp:1111:6: error: ‘ms’ was not declared in this scope
  s = ms->find(34562345);
      ^
../Sistema.cpp:1112:6: error: ‘mm’ was not declared in this scope
  m = mm->find(65436667);
      ^
../Sistema.cpp:1123:20: error: ‘cd’ was not declared in this scope
  Diagnostico* D1 = cd->altaDiagnostico(rep->getCodigo(), rep->getEtiqueta(),"Desc 1",cons);
                    ^
../Sistema.cpp:1180:2: error: ‘ct’ was not declared in this scope
  ct->agregarTratamientoQuirurjico(65436667,"Desc 11",Fecha(25,7,2014),D2);
  ^
make: *** [Sistema.o] Error 1
01:04:09 **** Incremental Build of configuration Debug for project Code ****
make all 
Building file: ../Sistema.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"Sistema.d" -MT"Sistema.d" -o "Sistema.o" "../Sistema.cpp"
../Sistema.cpp: In function ‘void agregarDatosDePrueba()’:
../Sistema.cpp:1054:2: error: ‘cc’ was not declared in this scope
  cc->ingresarFechaConsulta(Fecha(23,6,2014));
  ^
../Sistema.cpp:1111:6: error: ‘ms’ was not declared in this scope
  s = ms->find(34562345);
      ^
../Sistema.cpp:1112:6: error: ‘mm’ was not declared in this scope
  m = mm->find(65436667);
      ^
../Sistema.cpp:1123:20: error: ‘cd’ was not declared in this scope
  Diagnostico* D1 = cd->altaDiagnostico(rep->getCodigo(), rep->getEtiqueta(),"Desc 1",cons);
                    ^
../Sistema.cpp:1180:2: error: ‘ct’ was not declared in this scope
  ct->agregarTratamientoQuirurjico(65436667,"Desc 11",Fecha(25,7,2014),D2);
  ^
make: *** [Sistema.o] Error 1
01:05:29 **** Incremental Build of configuration Debug for project Code ****
make all 
Building file: ../Sistema.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"Sistema.d" -MT"Sistema.d" -o "Sistema.o" "../Sistema.cpp"
../Sistema.cpp: In function ‘void agregarDatosDePrueba()’:
../Sistema.cpp:1111:6: error: ‘ms’ was not declared in this scope
  s = ms->find(34562345);
      ^
../Sistema.cpp:1112:6: error: ‘mm’ was not declared in this scope
  m = mm->find(65436667);
      ^
make: *** [Sistema.o] Error 1
01:05:38 **** Incremental Build of configuration Debug for project Code ****
make all 
Building file: ../Sistema.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"Sistema.d" -MT"Sistema.d" -o "Sistema.o" "../Sistema.cpp"
Finished building: ../Sistema.cpp
 
Building target: Code
Invoking: Cross G++ Linker
g++  -o "Code"  ./Administrador.o ./ConReserva.o ./Consulta.o ./ControladorConsultas.o ./ControladorDiagnosticos.o ./ControladorTratamientos.o ./ControladorUsuarios.o ./DataAltaReactivacion.o ./DataConReserva.o ./DataConsulta.o ./DataDiagnostico.o ./DataEmergencia.o ./DataEstado.o ./DataHistorial.o ./DataMedico.o ./DataRep.o ./DataRol.o ./DataTratamiento.o ./DataUsuario.o ./Diagnostico.o ./Emergencia.o ./Farmacologico.o ./Fecha.o ./HistorialNotificaciones.o ./IObserver.o ./ManejadorAdministradores.o ./ManejadorMedicamentos.o ./ManejadorMedicos.o ./ManejadorRepresentaciones.o ./ManejadorSocios.o ./Medicamento.o ./Medico.o ./MedicosDelPaciente.o ./MedicosLibres.o ./Notificacion.o ./Prog4.o ./Quirurjico.o ./RelojSistema.o ./Rol.o ./Sistema.o ./Socio.o ./Strategy.o ./Stretegy.o ./Tratamiento.o ./Usuario.o ./testConsulta.o ./testDiagnostico.o ./testMMedicamentos.o ./testMMedicos.o ./testMSocios.o ./testObservadores.o ./testTratamiento.o   
Finished building target: Code
 
